src/main/java/edu/ucsd/grammar/QueryParser.java
/* Generated By:JavaCC: Do not edit this line. QueryParser.java */
package edu.ucsd.grammar;

import edu.ucsd.grammar.ForClause;
import edu.ucsd.grammar.ForClauseType;
import edu.ucsd.grammar.ReturnClause;
import edu.ucsd.grammar.WhereClause;
import edu.ucsd.grammar.WhereClauseType;

        public class QueryParser implements QueryParserConstants {
                public static void main(String[] args)
                throws ParseException, TokenMgrError {
                        QueryParser queryParser = new QueryParser( System.in );
                        queryParser.parse(); }

/* TOKEN : { < VAR_TYPE_DECLARATION : (<IDENTIFIER> ":" ("Word" | "Sentence" | "Document" > ) } */

/* Parser */
  final public ParsedQuery parse() throws ParseException {
        ForClause forClause;
        WhereClause whereClause;
        ReturnClause returnClause;
    forClause = FOR_CLAUSE();
    whereClause = WHERE_CLAUSE();
    returnClause = RETURN_CLAUSE();
          {if (true) return new ParsedQuery(forClause, whereClause, returnClause);}
    throw new Error("Missing return statement in function");
  }

  final public ForClause FOR_CLAUSE() throws ParseException {
        ForClause forClause = new ForClause();
    jj_consume_token(KWFOR);
    if (jj_2_1(3)) {
      IDENTIFIER_TYPE_DECLARATION(forClause);
    } else if (jj_2_2(3)) {
      VARIABLE_ASSIGNMENT(forClause);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_1:
    while (true) {
      if (jj_2_3(3)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(CLAUSE_SEPARATOR);
      if (jj_2_4(3)) {
        IDENTIFIER_TYPE_DECLARATION(forClause);
      } else if (jj_2_5(3)) {
        VARIABLE_ASSIGNMENT(forClause);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return forClause;}
    throw new Error("Missing return statement in function");
  }

  final public WhereClause WHERE_CLAUSE() throws ParseException {
        WhereClause whereClause = new WhereClause();
    jj_consume_token(KWWHERE);
    if (jj_2_6(3)) {
      WORD_CONSTRAINT(whereClause);
    } else if (jj_2_7(3)) {
      CONTAINS_CONSTRAINT(whereClause);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_2:
    while (true) {
      if (jj_2_8(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(WHERE_CLAUSE_CONNECTOR);
      if (jj_2_9(3)) {
        WORD_CONSTRAINT(whereClause);
      } else if (jj_2_10(3)) {
        CONTAINS_CONSTRAINT(whereClause);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return whereClause;}
    throw new Error("Missing return statement in function");
  }

  final public ReturnClause RETURN_CLAUSE() throws ParseException {
        Token t;
    jj_consume_token(KWRETURN);
    t = jj_consume_token(IDENTIFIER);
          {if (true) return new ReturnClause(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public void IDENTIFIER_TYPE_DECLARATION(ForClause forClause) throws ParseException {
        Token t;
        String variableName;
        String variableType;
    t = jj_consume_token(IDENTIFIER);
          variableName = t.image;
    jj_consume_token(IDENTIFIER_TYPE_SEPARATOR);
    t = jj_consume_token(IDENTIFIER_TYPES);
          variableType = t.image;
          forClause.addClauseType(new VariableDeclaration(variableName, variableType));
  }

  final public void VARIABLE_ASSIGNMENT(ForClause forClause) throws ParseException {
        Token t;
        String variableName;
        String functionName;
        String argument;
    t = jj_consume_token(IDENTIFIER);
          variableName = t.image;
    jj_consume_token(VARIABLE_ASSIGNMENT);
    t = jj_consume_token(FUNCTION);
          functionName = t.image;
    jj_consume_token(OPEN_PAR);
    t = jj_consume_token(IDENTIFIER);
          argument = t.image;
    jj_consume_token(CLOSE_PAR);
          forClause.addClauseType(new VariableAssignment(variableName, functionName, argument));
  }

  final public void WORD_CONSTRAINT(WhereClause whereClause) throws ParseException {
        Token t;
        String variableName;
        String variableValue;
    t = jj_consume_token(IDENTIFIER);
          variableName = t.image;
    jj_consume_token(VARIABLE_ASSIGNMENT);
    t = jj_consume_token(WORD);
                variableValue = t.image;
                whereClause.addClauseType(new WordConstraint(variableName, variableValue));
  }

  final public void CONTAINS_CONSTRAINT(WhereClause whereClause) throws ParseException {
        Token t;
        String identifier;
        String function;
        String parameter;
    t = jj_consume_token(IDENTIFIER);
          identifier = t.image;
    t = jj_consume_token(DOC_AND_SENTENCE_FUNCTION);
          function = t.image;
    jj_consume_token(OPEN_PAR);
    t = jj_consume_token(IDENTIFIER);
          parameter = t.image;
    jj_consume_token(CLOSE_PAR);
          whereClause.addClauseType(new ContainsConstraint(identifier, function, parameter));
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_3R_5() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(VARIABLE_ASSIGNMENT)) return true;
    if (jj_scan_token(WORD)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(DOC_AND_SENTENCE_FUNCTION)) return true;
    if (jj_scan_token(OPEN_PAR)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_3()) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_3R_6()) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_3() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(IDENTIFIER_TYPE_SEPARATOR)) return true;
    if (jj_scan_token(IDENTIFIER_TYPES)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(WHERE_CLAUSE_CONNECTOR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) return true;
    }
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_5()) return true;
    return false;
  }

  private boolean jj_3R_4() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(VARIABLE_ASSIGNMENT)) return true;
    if (jj_scan_token(FUNCTION)) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_3()) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(CLAUSE_SEPARATOR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) return true;
    }
    return false;
  }

  /** Generated Token Manager. */
  public QueryParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[10];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public QueryParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public QueryParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new QueryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public QueryParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new QueryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public QueryParser(QueryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(QueryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[22];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 0; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 22; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 10; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
            case 2: jj_3_3(); break;
            case 3: jj_3_4(); break;
            case 4: jj_3_5(); break;
            case 5: jj_3_6(); break;
            case 6: jj_3_7(); break;
            case 7: jj_3_8(); break;
            case 8: jj_3_9(); break;
            case 9: jj_3_10(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

        }

        class WordConstraint implements WhereClauseType<WordConstraint> {
                private String variableName;
                private String variableValue;

                public WordConstraint(String variableName, String variableValue) {
                        this.variableName = variableName;
                        this.variableValue = variableValue;;
                }

                @Override
                public String getVariableName() {
                        return this.variableName;
                }

                @Override
                public String getFunctionParameter() {
                        return null;
                }

                public String getVariableValue() {
                        return this.variableValue;
                }

                @Override
                public boolean usesVariableName(String variableName) {
                        return variableName.equals(this.variableName);
                }
        }

        class ContainsConstraint implements WhereClauseType<ContainsConstraint> {
                private String variableName;
                private String function;
                private String functionParameter;

                public ContainsConstraint(String variableName, String function, String functionParameter) {
                        this.variableName = variableName;
                        this.function = function;
                        this.functionParameter = functionParameter;
                }

                @Override
                public String getVariableName() {
                        return this.variableName;
                }

                public String getFunction() {
                        return this.function;
                }

                @Override
                public String getFunctionParameter() {
                        return this.functionParameter;
                }

                @Override
                public boolean usesVariableName(String variableName) {
                        return variableName.equals(this.variableName) || variableName.equals(getFunctionParameter());
                }
        }
